NEW273623
RemoteImageBufferProxy should not check backend size
https://bugs.webkit.org/show_bug.cgi?id=273623
Summary RemoteImageBufferProxy should not check backend size
Kimmo Kinnunen
Reported 2024-05-02 06:02:27 PDT
RemoteImageBufferProxy should not check backend size The size check is property of the backend, but RemoteImageBufferProxy cannot know which backend the GPUP gives it
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-02 06:02:55 PDT
Kimmo Kinnunen
Comment 2 2024-05-02 08:20:24 PDT
Note You need to log in before you can comment on or make changes to this bug.